# TeaLang2

./: CMakeLists.txt  README.md  ast.dot  main.cpp
example_scripts/: array_test.txt  auto_tests.txt  struct_test.tlg  struct_test.txt  test.txt  test2.txt
example_scripts/report_examples/: array_test.tlg  auto_tests.tlg  vector_norms.tlg
interpreter/: interpreter.cpp  interpreter.h
lexer/: grammarDFA.cpp  grammarDFA.h  lexer.cpp  lexer.h
parser/: parser.cpp  parser.h
semantic_analysis/: semantic_analysis.cpp  semantic_analysis.h
semantic_analysis/graphviz_example/: graphviz_ast_visitor.cpp  graphviz_ast_visitor.h
symbol_table/: symbol.h  symbol_table.cpp  symbol_table.h
visitor_ast/: astNode.cpp  astNode.h  visitor.h
